review template for tesis

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <div class="nav-bar">
   <div class="left-part">
-    <button mat-mini-fab id="nav-left-button"><i class="material-icons" style="font-size:18px;">more_vert</i></button>
+    <button mat-mini-fab id="nav-left-button" [matMenuTriggerFor]="menu"><i class="material-icons" style="font-size:18px;">more_vert</i></button>
     <h4>{{ title }}</h4>
+    <!-- <h1 *ngFor="let menu of menuItems" >{{menu.item}}</h1> -->
   </div>
   <div class="right-part">
     <div class="right-part" id="nav-right">
@@ -10,15 +11,19 @@
       </mat-form-field>
       <button mat-mini-fab class="search-btn"><i class="material-icons" style="font-size:18px;">search</i></button>
       <button mat-icon-button><i class="material-icons icon-btn">dashboard</i></button>
-      <app-msgiconbtn icon="notifications" number="5" [matMenuTriggerFor]="menu"></app-msgiconbtn>
+      <app-msgiconbtn icon="notifications" number="5" [matMenuTriggerFor]="menux"></app-msgiconbtn>
       <button mat-icon-button><i class="material-icons icon-btn">person</i></button>
       <mat-menu #menu="matMenu">
+        <button mat-menu-item *ngFor="let menu of menuItems">{{menu.item}}</button>
+      </mat-menu>
+      <mat-menu #menux="matMenu">
         <button mat-menu-item>Mike John responded to your email</button>
         <button mat-menu-item>You have 5 new tasks</button>
         <button mat-menu-item>You're now friend with Andrew</button>
         <button mat-menu-item>Another Notification</button>
         <button mat-menu-item>Another One</button>
       </mat-menu>
+      
     </div>
     <div id="menu">
       <button mat-icon-button (click)="menuClick()"><i class="material-icons">menu</i></button>
